Fixed Z-index for white circle in the background

--- a/app/assets/stylesheets/advantages.css.scss
+++ b/app/assets/stylesheets/advantages.css.scss
@@ -96,7 +96,7 @@
     position: absolute;
     left: 269px;
     top: -176px;
-    z-index: 100;
+    z-index: 1;
   }
 
   .advantages-button {
